--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -290,7 +290,7 @@ boost:
     slackpkg:
       packages: [boost]
   ubuntu:
-    '*': [libboost-all-dev]
+    '*': [libboost1.70-dev]
     lucid: [libboost1.40-all-dev]
     maverick: [libboost1.42-all-dev]
     natty: [libboost1.42-all-dev]
